[tool.poetry]
name = "course work 4"
version = "0.1.0"
description = ""
authors = ["<Petr Matis> <<dragon031088@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
basemodel = "^20190604.1625"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
